--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "groupapis",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "react-icons": "^5.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
+   "name": "groupapis",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "format": "prettier --write .",
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "next": "14.0.4",
+      "react": "^18",
+      "react-dom": "^18",
+      "react-hook-form": "^7.49.3",
+      "react-icons": "^5.0.1"
+   },
+   "devDependencies": {
+      "autoprefixer": "^10.0.1",
+      "eslint": "^8",
+      "eslint-config-next": "14.0.4",
+      "postcss": "^8",
+      "prettier": "3.2.4",
+      "tailwindcss": "^3.3.0"
+   }
 }
